--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-read-more-read-less": "^1.0.7",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-scroll-to-top": "^3.0.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.3"
   },
