--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.6.0",
     "react-loader-spinner": "^5.3.4",
     "react-read-more-read-less": "^1.0.7",
     "react-router-dom": "^6.4.1",
