--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movies-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rmarkanych.github.io/movies-project/",
+  "homepage": "https://rmarkanych.github.io/movies/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
